--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="top-banner">
     <div class="logo">
       <img 
-        src="logo.png" 
-        data-gif="logo.gif" 
+        src="logos/logo.png" 
+        data-gif="logos/logo.gif" 
         data-duration="1520"
         alt="Logo" 
         class="logo-img"
@@ -31,39 +31,39 @@
   <!-- First Row -->
   <div class="first-row">
     <picture>
-      <source srcset="StoolBanner.webp" type="image/webp">
-      <img src="StoolBanner.png" alt="Banner Image" class="banner">
+      <source srcset="media/StoolBanner.webp" type="image/webp">
+      <img src="media/StoolBanner.png" alt="Banner Image" class="banner">
     </picture>
-    <img src="rca.png" alt="Logo Overlay" class="logo-overlay">
+    <img src="logos/rca.png" alt="Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
   <!-- Second Row -->
   <div class="second-row">
     <picture>
-      <source srcset="MicroPrints.webp" type="image/webp">
-      <img src="MicroPrints.png" alt="Second Banner Image" class="banner">
+      <source srcset="media/MicroPrints.webp" type="image/webp">
+      <img src="media/MicroPrints.png" alt="Second Banner Image" class="banner">
     </picture>
-    <img src="fullcontrol.png" alt="Second Logo Overlay" class="logo-overlay">
-    <img src="durham.png" alt="Logo Above" class="logo-above">
+    <img src="logos/fullcontrol.png" alt="Second Logo Overlay" class="logo-overlay">
+    <img src="logos/durham.png" alt="Logo Above" class="logo-above">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
   <!-- Third Row -->
   <div class="third-row">
     <picture>
-      <source srcset="IoT.webp" type="image/webp">
-      <img src="IoT.webp" alt="Third Banner Image" class="banner">
+      <source srcset="media/IoT.webp" type="image/webp">
+      <img src="media/IoT.webp" alt="Third Banner Image" class="banner">
     </picture>
-    <img src="swansea.png" alt="Third Logo Overlay" class="logo-overlay-third">
+    <img src="logos/swansea.png" alt="Third Logo Overlay" class="logo-overlay-third">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Fourth Row -->
   <div class="fourth-row">
     <picture>
-      <source srcset="KOTH.webp" type="image/webp">
-      <img src="KOTH.webp" alt="Third Banner Image" class="banner">
+      <source srcset="media/KOTH.webp" type="image/webp">
+      <img src="media/KOTH.webp" alt="Third Banner Image" class="banner">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
