--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <title>Ben Jones</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="favicon.png">
+<link rel="apple-touch-icon" href="favicon.png">
+<!-- Optional for higher resolution screens -->
+<link rel="icon" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" sizes="16x16" href="favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png">
+
 </head>
+  
 <body>
   <!-- Top Banner -->
   <div class="top-banner">
