--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ben Jones</title>
   <link rel="stylesheet" href="styles.css">
+ <!-- Standard favicon -->
   <link rel="icon" href="favicon.png" type="image/png">
-<link rel="apple-touch-icon" href="favicon.png">
-<!-- Optional for higher resolution screens -->
-<link rel="icon" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" sizes="16x16" href="favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon-180x180.png">
 
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="favicon-180x180.png">
+
+  <!-- Optional for higher resolution screens -->
+  <link rel="icon" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" sizes="48x48" href="favicon-48x48.png">
+  <link rel="icon" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" sizes="192x192" href="favicon-192x192.png">
 </head>
   
 <body>
