--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
+     <!-- Firth Row -->
+  <div class="fifth-row">
+    <picture>
+      <source srcset="media/gingerbread.webp" type="image/webp">
+      <img src="media/gingerbread.webp" alt="Third Banner Image" class="banner">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
 </div>
 
 
