--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
-     <!-- Firth Row -->
+     <!-- Fifth Row -->
   <div class="fifth-row">
     <picture>
       <source srcset="media/gingerbread.webp" type="image/webp">
@@ -85,28 +85,21 @@
   </div>
   <!-- Divider -->
   <div class="divider"></div>
+   <!-- Sixth Row -->
+  <div class="fifth-row">
+    <picture>
+      <source srcset="media/civildesign.webp" type="image/webp">
+      <img src="media/civildesign.webp" alt="Third Banner Image" class="banner">
+  </div>
+  <!-- Divider -->
+  <div class="divider"></div>
+  
 </div>
 
 
     <!-- Divider -->
     <div class="divider"></div>
-    <!-- Other Rows -->
-    <div class="row">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="divider"></div>
-    <div class="row">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
+
 
   <!-- Include the JavaScript file at the end of the body -->
   <script src="main.js"></script>
