--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="fourth-row">
     <picture>
       <source srcset="media/KOTH.webp" type="image/webp">
-      <img src="media/KOTH.webp" alt="Third Banner Image" class="banner">
+      <img src="media/KOTH.webp" alt="Fourth Banner Image" class="banner">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
@@ -81,15 +81,15 @@
   <div class="fifth-row">
     <picture>
       <source srcset="media/gingerbread.webp" type="image/webp">
-      <img src="media/gingerbread.webp" alt="Third Banner Image" class="banner">
+      <img src="media/gingerbread.webp" alt="Fifth Banner Image" class="banner">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Sixth Row -->
-  <div class="fifth-row">
+  <div class="sixth-row">
     <picture>
       <source srcset="media/civildesign.webp" type="image/webp">
-      <img src="media/civildesign.webp" alt="Third Banner Image" class="banner">
+      <img src="media/civildesign.webp" alt="Sixth Banner Image" class="banner">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
