--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <picture>
       <source srcset="media/civildesign.webp" type="image/webp">
       <img src="media/civildesign.webp" alt="Sixth Banner Image" class="banner">
+   </picture>
+    <img src="logos/durham.png" alt="Sixth Logo Overlay" class="logo-overlay-sixth">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
