--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <source srcset="media/IoT.webp" type="image/webp">
       <img src="media/IoT.webp" alt="Third Banner Image" class="banner">
     </picture>
-    <img src="logos/swansea.png" alt="Third Logo Overlay" class="logo-overlay-third">
+    <img src="logos/swansea.png" alt="Third Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
@@ -91,7 +91,7 @@
       <source srcset="media/civildesign.webp" type="image/webp">
       <img src="media/civildesign.webp" alt="Sixth Banner Image" class="banner">
    </picture>
-    <img src="logos/durham.png" alt="Sixth Logo Overlay" class="logo-overlay-sixth">
+    <img src="logos/durham.png" alt="Sixth Logo Overlay" class="logo-overlay">
   </div>
   <!-- Divider -->
   <div class="divider"></div>
