--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
   <div class="divider"></div>
    <!-- Fourth Row -->
   <div class="fourth-row">
+    <a href="koth.html" class="column-link">
     <picture>
       <source srcset="media/KOTH.webp" type="image/webp">
       <img src="media/KOTH.webp" alt="Fourth Banner Image" class="banner">
+      </a>
   </div>
+
   <!-- Divider -->
   <div class="divider"></div>
      <!-- Fifth Row -->
