--- a/koth.html
+++ b/koth.html
@@ -3,54 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GIF Gallery</title>
+  <title>KOTH</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f0f0f0;
+      padding: 0;
+      background-color: #f8f8f8;
+      color: #333;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .title {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .body-text {
+      font-size: 1.1rem;
+      margin-bottom: 30px;
+      line-height: 1.6;
     }
 
     .gif-container {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      width: 100%;
-      max-width: 1200px;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 30px;
     }
 
     .gif-container img {
-      width: 18%; /* Adjust to ensure 5 gifs fit in one row */
-      max-width: 200px; /* Optional: limit maximum size */
+      width: 22%; /* Adjust to fit 4 gifs per row */
+      max-width: 250px; /* Optional: limit maximum size */
       height: auto; /* Maintain aspect ratio */
       border: 2px solid #ccc; /* Optional: add border */
       border-radius: 5px; /* Optional: rounded corners */
     }
 
+    .centered-image {
+      margin: 30px auto;
+      width: 75%;
+      max-width: 900px;
+    }
+
     @media (max-width: 768px) {
       .gif-container img {
-        width: 30%; /* Make images smaller for smaller screens */
+        width: 40%; /* Make images smaller for smaller screens */
       }
     }
 
     @media (max-width: 480px) {
       .gif-container img {
-        width: 45%; /* Stack 2 per row for very small screens */
+        width: 70%; /* Stack gifs for very small screens */
       }
     }
   </style>
 </head>
 <body>
-  <div class="gif-container">
-    <img src="media/gif1.gif" alt="GIF 1">
-    <img src="media/gif2.gif" alt="GIF 2">
-    <img src="media/gif3.gif" alt="GIF 3">
-    <img src="media/gif4.gif" alt="GIF 4">
-    <img src="media/gif5.gif" alt="GIF 5">
+  <div class="container">
+    <!-- Title Image -->
+    <img src="logos/koth.png" alt="KOTH logo" class="title-image">
+
+    <!-- Body Text -->
+    <p class="body-text">
+      Explore our curated selection of animations and visuals. Below, you'll find a series of GIFs and images to inspire and captivate.
+    </p>
+
+    <!-- GIF Section -->
+    <div class="gif-container">
+      <img src="media/king.gif" alt="GIF 1">
+      <img src="media/knight.gif" alt="GIF 2">
+      <img src="media/wizard.gif" alt="GIF 3">
+      <img src="media/dragon.gif" alt="GIF 4">
+    </div>
+
+    <!-- Centered PNG Image -->
+    <img src="media/kothimage.png" alt="Centered Image" class="centered-image">
   </div>
 </body>
 </html>
