--- a/koth.html
+++ b/koth.html
@@ -14,7 +14,7 @@
 
     <!-- Body Text -->
     <p class="body-text">
-      Explore our curated selection of animations and visuals. Below, you'll find a series of GIFs and images to inspire and captivate.
+      A Board Game of Strategy and Skill
     </p>
 
     <!-- GIF Section -->
