--- a/koth.html
+++ b/koth.html
@@ -25,6 +25,12 @@
       <img src="media/dragon.gif" alt="GIF 4">
     </div>
 
+    <div class="image-row">
+  <img src="kothfront.png" alt="First Side Image">
+  <img src="kothback.png" alt="Second Side Image">
+</div>
+
+    
     <!-- Centered PNG Image -->
     <img src="media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
