--- a/koth.html
+++ b/koth.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="image-row">
-  <img src="kothfront.png" alt="First Side Image">
-  <img src="kothback.png" alt="Second Side Image">
+  <img src="media/kothfront.png" alt="First Side Image">
+  <img src="media/kothback.png" alt="Second Side Image">
 </div>
 
     
