--- a/koth.html
+++ b/koth.html
@@ -26,8 +26,12 @@
     </div>
 
     <div class="image-row">
-  <img src="media/kothfront.png" alt="First Side Image">
-  <img src="media/kothback.png" alt="Second Side Image">
+  <img src="image1.png" alt="First Side Image" class="clickable-image">
+  <img src="image2.png" alt="Second Side Image" class="clickable-image">
+</div>
+
+<div class="lightbox" id="lightbox">
+  <img id="lightbox-img" alt="Enlarged Image">
 </div>
 
     
