--- a/koth.html
+++ b/koth.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="image-row">
-  <img src="image1.png" alt="First Side Image" class="clickable-image">
-  <img src="image2.png" alt="Second Side Image" class="clickable-image">
+  <img src="kothfront.png" alt="First Side Image" class="clickable-image">
+  <img src="kothback.png" alt="Second Side Image" class="clickable-image">
 </div>
 
 <div class="lightbox" id="lightbox">
