--- a/koth.html
+++ b/koth.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="image-row">
-  <img src="kothfront.png" alt="First Side Image" class="clickable-image">
-  <img src="kothback.png" alt="Second Side Image" class="clickable-image">
+  <img src="media/kothfront.png" alt="First Side Image" class="clickable-image">
+  <img src="media/kothback.png" alt="Second Side Image" class="clickable-image">
 </div>
 
 <div class="lightbox" id="lightbox">
