--- a/koth.html
+++ b/koth.html
@@ -38,5 +38,6 @@
     <!-- Centered PNG Image -->
     <img src="media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
