--- a/koth.html
+++ b/koth.html
@@ -5,7 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KOTH</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Standard favicon -->
+  <link rel="icon" href="favicon.png" type="image/png">
+
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" href="favicon-180x180.png">
+
+  <!-- Optional for higher resolution screens -->
+  <link rel="icon" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" sizes="48x48" href="favicon-48x48.png">
+  <link rel="icon" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" sizes="192x192" href="favicon-192x192.png">
+</head>
   
+<body>
+  <!-- Top Banner -->
+  <div class="top-banner">
+    <div class="logo">
+      <img 
+        src="logos/logo.png" 
+        data-gif="logos/logo.gif" 
+        data-duration="1520"
+        alt="Logo" 
+        class="logo-img"
+      >
+    </div>
+    <div class="menu">
+      <a href="#Connect">Connect</a>
+    </div>
+  </div>
+
+  <!-- Page Content -->
 </head>
 <body>
   <div class="container">
