--- a/koth.html
+++ b/koth.html
@@ -23,13 +23,14 @@
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
+      <a href="index.html">
       <img 
         src="logos/logo.png" 
         data-gif="logos/logo.gif" 
         data-duration="1520"
         alt="Logo" 
         class="logo-img"
-      >
+      ></a>
     </div>
     <div class="menu">
       <a href="#Connect">Connect</a>
