--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
   
 <body>
+  <div id="loading-screen">
+  <div class="spinner"></div>
+</div>
+
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
