--- a/koth.html
+++ b/koth.html
@@ -19,7 +19,12 @@
   <link rel="icon" sizes="192x192" href="favicon-192x192.png">
 </head>
   
-<body>
+
+  <body>
+  <div id="loading-screen">
+  <div class="spinner"></div>
+</div>
+
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
