Update and rename koth.html to koth/koth.html

--- a/koth/koth.html
+++ b/koth/koth.html
@@ -28,7 +28,7 @@
   <!-- Top Banner -->
   <div class="top-banner">
     <div class="logo">
-      <a href="index.html">
+      <a href="/">
       <img 
         src="logos/logo.png" 
         data-gif="logos/logo.gif" 
