--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="divider"></div>
    <!-- Fourth Row -->
   <div class="fourth-row">
-    <a href="koth.html" class="column-link">
+    <a href="/koth" class="column-link">
     <picture>
       <source srcset="media/KOTH.webp" type="image/webp">
       <img src="media/KOTH.webp" alt="Fourth Banner Image" class="banner">
