--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
   <!-- Divider -->
   <div class="divider"></div>
    <!-- Fourth Row -->
-  <div class="fourth-row">
-    <a href="/koth" class="column-link">
+ <div class="fourth-row">
+  <a href="/koth" class="column-link">
     <picture>
       <source srcset="media/KOTH.webp" type="image/webp">
       <img src="media/KOTH.webp" alt="Fourth Banner Image" class="banner">
-      </a>
-  </div>
+    </picture>
+  </a>
+</div>
+
 
   <!-- Divider -->
   <div class="divider"></div>
