--- a/koth/koth.html
+++ b/koth/koth.html
@@ -74,6 +74,6 @@
     <!-- Centered PNG Image -->
     <img src="media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
-  <script src="main.js"></script>
+  <script src="../main.js"></script>
 </body>
 </html>
