--- a/koth/koth.html
+++ b/koth/koth.html
@@ -30,8 +30,8 @@
     <div class="logo">
       <a href="/">
       <img 
-        src="logos/logo.png" 
-        data-gif="logos/logo.gif" 
+        src="../logos/logo.png" 
+        data-gif="../logos/logo.gif" 
         data-duration="1520"
         alt="Logo" 
         class="logo-img"
@@ -46,7 +46,7 @@
 
   <div class="container">
     <!-- Title Image -->
-    <img src="logos/kothlogo.png" alt="KOTH logo" class="title-image">
+    <img src="../logos/kothlogo.png" alt="KOTH logo" class="title-image">
 
     <!-- Body Text -->
     <p class="body-text">
