--- a/koth/index.html
+++ b/koth/index.html
@@ -73,6 +73,6 @@
     <img src="../media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
 
-  <script src="../main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
