--- a/koth/index.html
+++ b/koth/index.html
@@ -41,6 +41,15 @@
   </div>
 
   <!-- Page Content -->
+
+   <style>
+        body {
+            background-color: #bfb7fe; /* You can change this to any color code you prefer */
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+  
   <div class="container">
     <!-- Title Image -->
     <img src="../logos/kothlogo.png" alt="KOTH logo" class="title-image">
