--- a/koth/index.html
+++ b/koth/index.html
@@ -41,14 +41,6 @@
   </div>
 
   <!-- Page Content -->
-
-   <style>
-        body {
-            background-color: #bfb7fe; /* You can change this to any color code you prefer */
-            margin: 0;
-            padding: 0;
-        }
-    </style>
   
   <div class="container">
     <!-- Title Image -->
@@ -81,6 +73,16 @@
     <!-- Centered PNG Image -->
     <img src="../media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
+
+   .bottom-image {
+            width: 100%;  /* Makes the image span the full width */
+            height: auto; /* Keeps the image's aspect ratio */
+            object-fit: cover; /* Ensures the image covers the area without distortion */
+        }
+
+</head>
+    
+    <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
 
 <script src="main.js"></script>
 </body>
