--- a/koth/index.html
+++ b/koth/index.html
@@ -74,7 +74,14 @@
     <img src="../media/kothimage.jpg" alt="Centered Image" class="centered-image">
   </div>
 </head>
-    
+</style>
+          .bottom-image {
+            max-width: 1000px;  /* Makes the image span the full width */
+            height: auto; /* Keeps the image's aspect ratio */
+            object-fit: cover; /* Ensures the image covers the area without distortion */
+        }
+    </style>
+  
     <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
 
 <script src="main.js"></script>
