--- a/koth/index.html
+++ b/koth/index.html
@@ -75,6 +75,7 @@
   </div>
 </head>
 </style>
+  body {
    /* Media query for screens wider than 1200px */
         @media (min-width: 1200px) {
             .image-row, .gif-section {
@@ -92,6 +93,7 @@
             height: auto; /* Keeps the image's aspect ratio */
          
         }
+  }
     </style>
   
     <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
