--- a/koth/index.html
+++ b/koth/index.html
@@ -51,19 +51,21 @@
       A Board Game of Strategy and Skill
     </p>
 
-    <!-- GIF Section -->
-    <div class="gif-container">
-      <img src="../media/king.gif" alt="GIF 1">
-      <img src="../media/knight.gif" alt="GIF 2">
-      <img src="../media/wizard.gif" alt="GIF 3">
-      <img src="../media/dragon.gif" alt="GIF 4">
-    </div>
+    <div class="gif-and-image-row-wrapper">
+  <!-- GIF Section -->
+  <div class="gif-container">
+    <img src="../media/king.gif" alt="GIF 1">
+    <img src="../media/knight.gif" alt="GIF 2">
+    <img src="../media/wizard.gif" alt="GIF 3">
+    <img src="../media/dragon.gif" alt="GIF 4">
+  </div>
 
-    <!-- Image Row -->
-    <div class="image-row">
-      <img src="../media/kothfront.png" alt="First Side Image" class="clickable-image">
-      <img src="../media/kothback.png" alt="Second Side Image" class="clickable-image">
-    </div>
+  <!-- Image Row -->
+  <div class="image-row">
+    <img src="../media/kothfront.png" alt="First Side Image" class="clickable-image">
+    <img src="../media/kothback.png" alt="Second Side Image" class="clickable-image">
+  </div>
+</div>
 
     <!-- Lightbox -->
     <div class="lightbox" id="lightbox">
