--- a/koth/index.html
+++ b/koth/index.html
@@ -25,8 +25,9 @@
 </div>
 
   <!-- Top Banner -->
-  <div class="top-banner">
-    <div class="logo">
+<div class="top-banner">
+  <div class="logo">
+    <a href="../index.html"> <!-- Link to the original index -->
       <img 
         src="../logos/logo.png" 
         data-gif="../logos/logo.gif" 
@@ -34,11 +35,13 @@
         alt="Logo" 
         class="logo-img"
       >
-    </div>
-    <div class="menu">
-      <a href="#Connect">Connect</a>
-    </div>
+    </a>
   </div>
+  <div class="menu">
+    <a href="#Connect">Connect</a>
+  </div>
+</div>
+
 
   <!-- Page Content -->
   
