--- a/koth/index.html
+++ b/koth/index.html
@@ -24,10 +24,10 @@
   <div class="spinner"></div>
 </div>
 
-  <!-- Top Banner -->
+ <!-- Top Banner -->
 <div class="top-banner">
   <div class="logo">
-    <a href="../index.html"> <!-- Link to the original index -->
+    <a href="../index.html" class="logo-link">
       <img 
         src="../logos/logo.png" 
         data-gif="../logos/logo.gif" 
