--- a/koth/index.html
+++ b/koth/index.html
@@ -27,7 +27,7 @@
  <!-- Top Banner -->
 <div class="top-banner">
   <div class="logo">
-    <a href="../index.html" class="logo-link">
+    <a href="/" class="logo-link">
       <img 
         src="../logos/logo.png" 
         data-gif="../logos/logo.gif" 
