--- a/koth/index.html
+++ b/koth/index.html
@@ -81,6 +81,16 @@
 </head>
   
     <img src="../media/kothlandscape.png" alt="Bottom Image" class="bottom-image">
+  <!-- Button to open the lightbox -->
+<button class="open-lightbox-btn">View More</button>
+
+<!-- Lightbox for image and text -->
+<div class="lightbox" id="image-text-lightbox">
+  <div class="lightbox-content">
+    <img src="lightbox-image-url.jpg" alt="Lightbox Image">
+    <p class="lightbox-text">How to Play:</p>
+  </div>
+</div>
 
 <script src="main.js"></script>
 </body>
