--- a/koth/index.html
+++ b/koth/index.html
@@ -87,7 +87,7 @@
 <!-- Lightbox for image and text -->
 <div class="lightbox" id="image-text-lightbox">
   <div class="lightbox-content">
-    <img src="lightbox-image-url.jpg" alt="Lightbox Image">
+    <img src="../media/kothcard.png" alt="Lightbox Image">
     <p class="lightbox-text">How to Play:</p>
   </div>
 </div>
