--- a/koth/index.html
+++ b/koth/index.html
@@ -81,7 +81,7 @@
 </head>
   
   <!-- Button to open the lightbox -->
-<button class="open-lightbox-btn">View More</button>
+<button class="open-lightbox-btn">How to Play</button>
 
 <!-- Lightbox for image and text -->
 <div class="lightbox" id="image-text-lightbox">
