--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
 <body>
   <div id="loading-screen">
-  <div class="spinner"></div>
+    <img src="../logos/logo.gif" alt="Loading...">
 </div>
 
   <!-- Top Banner -->
