--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
   
 <body>
-  <div id="loading-screen">
+  <div class="loading-screen">
     <img src="../logos/logo.gif" alt="Loading...">
 </div>
 
