--- a/koth/index.html
+++ b/koth/index.html
@@ -20,8 +20,8 @@
 </head>
   
 <body>
-  <div id="loading-screen">
-  <div class="spinner"></div>
+  <div class="loading-screen">
+    <img src="../logos/logo.gif" alt="Loading...">
 </div>
 
  <!-- Top Banner -->
