--- a/koth/index.html
+++ b/koth/index.html
@@ -54,6 +54,14 @@
       A Board Game of Strategy and Skill
     </p>
 
+     <!-- Container for the small images -->
+  <div class="image-container">
+    <img src="koth1.png" alt="Image 1" class="small-image">
+    <img src="koth2.png" alt="Image 2" class="small-image">
+    <img src="koth3.png" alt="Image 3" class="small-image">
+    <img src="koth4.png" alt="Image 4" class="small-image">
+  </div>
+
 <div class="gif-and-image-row-wrapper">
   <!-- GIF Section -->
   <div class="gif-container">
@@ -87,7 +95,7 @@
 <div class="lightbox" id="image-text-lightbox">
   <div class="lightbox-content">
     <img src="../media/kothcard.png" alt="Lightbox Image">
-    <p class="lightbox-text">How to Play:</p>
+    <p class="lightbox-text">King of the Hill is a 2 pl</p>
   </div>
 </div>
 
