--- a/koth/index.html
+++ b/koth/index.html
@@ -54,12 +54,24 @@
       A Board Game of Strategy and Skill
     </p>
 
-     <!-- Container for the small images -->
+    <!-- Container for the small images and captions -->
   <div class="image-container">
-    <img src="koth1.png" alt="Image 1" class="small-image">
-    <img src="koth2.png" alt="Image 2" class="small-image">
-    <img src="koth3.png" alt="Image 3" class="small-image">
-    <img src="koth4.png" alt="Image 4" class="small-image">
+    <div class="image-item">
+      <img src="koth1.png" alt="Image 1" class="small-image">
+      <p class="image-caption">8+</p>
+    </div>
+    <div class="image-item">
+      <img src="koth2.png" alt="Image 2" class="small-image">
+      <p class="image-caption">2-4 Players</p>
+    </div>
+    <div class="image-item">
+      <img src="image3.jpg" alt="Image 3" class="small-image">
+      <p class="image-caption">30-60 Mins</p>
+    </div>
+    <div class="image-item">
+      <img src="image4.jpg" alt="Image 4" class="small-image">
+      <p class="image-caption">35cm x 35cm</p>
+    </div>
   </div>
 
 <div class="gif-and-image-row-wrapper">
