--- a/koth/index.html
+++ b/koth/index.html
@@ -65,11 +65,11 @@
       <p class="image-caption">2-4 Players</p>
     </div>
     <div class="image-item">
-      <img src="../media/image3.jpg" alt="Image 3" class="small-image">
+      <img src="../media/koth3.png" alt="Image 3" class="small-image">
       <p class="image-caption">30-60 Mins</p>
     </div>
     <div class="image-item">
-      <img src="../media/image4.jpg" alt="Image 4" class="small-image">
+      <img src="../media/koth4.png" alt="Image 4" class="small-image">
       <p class="image-caption">35cm x 35cm</p>
     </div>
   </div>
